deploy: 9a01e3e7f2334dcdf5d3cf69e748369143799ee8

--- a/get/index.html
+++ b/get/index.html
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 ESC=$(printf '\033')
-TARGET_DIR=/home/$USER/.config/systemd/user/
+TARGET_DIR=/home/$USER/.config/systemd/user
 
 function helper_gen() {
   cat <<EOS
