--- a/get/index.html
+++ b/get/index.html
@@ -36,15 +36,41 @@ WantedBy=default.target
 EOS
 }
 
-mkdir -p "${TARGET_DIR}"
+function enable_linger() {
+  if ! sudo loginctl enable-linger "$USER"; then
+    printf "${ESC}[31m%s${ESC}[m\n" "✖ enable linger failed"
+    exit 1
+  fi
+  printf "${ESC}[33m%s${ESC}[m\n" "✅ enable linger"
+  exit 0
+}
 
-printf "${ESC}[33m%s${ESC}[m\n" "enable linger $USER"
+# Array of required commands
+required_commands=("awk" "code")
 
-if ! sudo loginctl enable-linger "$USER"; then
-  printf "${ESC}[31m%s${ESC}[m\n" "✖ linger failed"
+# Check if each command is installed
+for cmd in "${required_commands[@]}"; do
+  if ! command -v "$cmd" &>/dev/null; then
+    printf "${ESC}[31m%s${ESC}[m\n" "✖ $cmd is not installed. Please install it and try again."
+    exit 1
+  fi
+done
+
+if [ "$(ps -p 1 -o comm=)" != "systemd" ]; then
+  printf "${ESC}[31m%s${ESC}[m\n" "✖ This script is only for systemd"
   exit 1
 fi
-printf "${ESC}[33m%s${ESC}[m\n" "✅ enable linger"
+
+if [ "$(loginctl show-user "$USER" | grep 'Linger=yes')" != "Linger=yes" ]; then
+  enable_linger
+fi
+
+if [ "$(systemctl --user is-active code.service)" == "active" ]; then
+  printf "${ESC}[33m%s${ESC}[m\n" "✅ code.service is already running"
+  exit 0
+fi
+
+mkdir -p "${TARGET_DIR}"
 
 echo -e "$(helper_gen)" >"${TARGET_DIR}/code-helper"
 echo -e "$(service_gen)" >"${TARGET_DIR}/code.service"
